--- a/pom.xml
+++ b/pom.xml
@@ -3,26 +3,26 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dat.sem3</groupId>
-    <artifactId>startcode</artifactId>
+    <artifactId>BackendA2Sem3</artifactId>
     <version>1.0.1</version>
     <packaging>war</packaging>
 
-    <name>startcode</name>
+    <name>BackendA2Sem3</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        
+
         <!-- TODO: Add the URL to your own tomcat server. Used to deploy your WAR-file -->
         <!-- IMPORTANT-1: If your server uses https (via NGINX) use your DOMAIN NAME and https below: -->
-        <!-- IMPORTANT-2: Observe we are NOT using /manager/html but /manager/text for script uploads --> 
-	<remote.server>https://www.kavv.dk/tomcat/manager/text</remote.server>
+        <!-- IMPORTANT-2: Observe we are NOT using /manager/html but /manager/text for script uploads -->
+	<remote.server>https://www.karpantschof.com/tomcat/manager/text</remote.server>
 
         <!-- TODO: Add your own database name -->
         <!-- IMPORTANT-1: The database should exist on your droplet -->
         <db.name>startcode</db.name>
     </properties>
-    
+
     <dependencies>
 
         <dependency>
@@ -30,19 +30,19 @@
             <artifactId>org.eclipse.persistence.jpa</artifactId>
             <version>2.7.7</version>
         </dependency>
-        
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.26</version>
         </dependency>
-      
+
         <dependency>
             <groupId>org.glassfish.jersey.bundles</groupId>
             <artifactId>jaxrs-ri</artifactId>
             <version>2.32</version>
         </dependency>
-               
+
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
@@ -54,7 +54,7 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
-        
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -80,7 +80,7 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
-        
+
         <!-- Grizly Server used to test REST endpoints -->
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
@@ -88,23 +88,23 @@
             <version>2.32</version>
             <scope>test</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>4.3.1</version>
             <scope>test</scope>
         </dependency>
-        
+
         <!-- Security Dependencies (jwt-support) -->
-        
+
         <!-- https://mvnrepository.com/artifact/com.nimbusds/nimbus-jose-jwt -->
         <dependency>
             <groupId>com.nimbusds</groupId>
             <artifactId>nimbus-jose-jwt</artifactId>
             <version>9.0.1</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.mindrot</groupId>
             <artifactId>jbcrypt</artifactId>
@@ -121,22 +121,22 @@
     </dependencies>
 
     <build>
-       
+
         <plugins>
             <!-- Plugin used to deploy to remote server -->
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
-                <configuration>          
+                <configuration>
                     <server>TomcatServer</server>
                     <url>${remote.server}</url>
                     <username>${remote.user}</username>
                     <password>${remote.password}</password>
-                    <update>true</update>    
-                </configuration>  
-            </plugin>          
-            
+                    <update>true</update>
+                </configuration>
+            </plugin>
+
             <!--This is used to enable @BeforeAll etc used in jUnit 5 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -155,7 +155,7 @@
                     </dependency>
                 </dependencies>
             </plugin>
-           
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
