--- a/.github/workflows/mavenworkflow.yml
+++ b/.github/workflows/mavenworkflow.yml
@@ -4,7 +4,7 @@ on:
     branches:
     - main
 jobs:
-  CI Backend A2 Sem3:
+  BackendA2Sem3CI:
     runs-on: ubuntu-20.04 #or ubuntu-latest
     # services:
     #   mysql:
